--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -53,9 +53,10 @@ body {
   background-color: #ee2c2e;
   color: white;
   border-radius: 2px;
-  border: 0ch;
+  border: none;
   padding: 5px;
   width: 70px;
+  margin-left: 10px;
   cursor: pointer;
 }
 
@@ -67,6 +68,7 @@ body {
   border-radius: 4px;
   padding: 5px;
   width: 70px;
+  margin-left: 10px;
   cursor: pointer;
 }
 
