--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -47,10 +47,12 @@ body {
         background-color: #ee2c2e;
         color: white;
         border-radius: 2px;
-        border: 0ch;
+        border: none;
         padding: 5px;
         width: 70px;
+        margin-left: 10px;
         cursor: pointer;
+
     }
     .buttonSpam{
         font-family: $font;
@@ -60,6 +62,7 @@ body {
         border-radius: 4px;
         padding: 5px;
         width: 70px;
+        margin-left: 10px;
         cursor: pointer; 
        
     }
