--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,6 +45,10 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
+  -ms-grid-rows: (auto)[3];
+      grid-template-rows: repeat(3, auto);
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
 }
 
 .options .buttonDelete {
