--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -40,6 +40,8 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: repeat(2, 1fr);
     
     .buttonDelete{
         font-family: $font;
