--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -112,6 +112,8 @@ body {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
+  -webkit-column-width: 100;
+          column-width: 100;
 }
 
 .search input[type=text] {
