--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,11 +29,33 @@ body {
     grid-template-columns: repeat(2, 1fr);
     box-shadow: 3px 4px 12px -2px rgba(0,0,0,0.65);
 }
-.filter{
+.inboxFilter{
     grid-column-start: 1;
     grid-column-end: 2;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
+    .inbox{
+        margin-left: 20px;
+        font-family: $font;
+        font-size: 18px;
+    }
+    .count{
+        color: #ffffff;
+        text-align: center;
+        background: map-get($colors , redc );
+        width: 20px;
+        border-radius: 20px;
+        padding: 7px;
+        max-width: 10px;
+        margin: 10px;
+        cursor: pointer;
+        margin-left: 10px;
+    }
+    .select{
+        margin: 5%;
+    }
   }
 .options{
     grid-column-start: 2;
@@ -46,7 +68,7 @@ body {
     .buttonDelete{
         font-family: $font;
         font-size: 12px;
-        background-color: #ee2c2e;
+        background-color: map-get($colors , redc );
         color: white;
         border-radius: 2px;
         border: none;
@@ -69,7 +91,7 @@ body {
        
     }
     .buttonUnread{
-        background-color: #2cbaed;
+        background-color:map-get($colors, bluec );
         font-family: $font;
         font-size: 12px;
         color: white;
