--- a/src/styles/Search.scss
+++ b/src/styles/Search.scss
@@ -1,26 +1,23 @@
 .search{
   grid-column: 1 / 2;
   grid-row: 2 / 3;
-
-  .search-container button {
-    float: right;
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: 16px;
-    background: #ddd;
-    font-size: 17px;
-    border: none;
-    cursor: pointer;
-  }
-
+  display: flex;
+  align-items: center;
+  margin: 5%; 
 
   input[type=text] {
-    float: right;
+    width: 100%;
     padding: 6px;
     border: none;
-    margin-top: 8px;
-    margin-right: 16px;
     font-size: 17px;
+    border-radius: 3px;
+    box-shadow: 2px 1px 6px 1px rgba(161,161,161,1);
+  }
+  input::placeholder {
+    color: #949898;
+    font-family: $font;
+    font-size: $fsize;
+
   }
 
 }
