--- a/src/styles/Filter.scss
+++ b/src/styles/Filter.scss
@@ -3,15 +3,18 @@ $font: 'Helvetica';
 .inboxFilter {
   grid-column-start: 1;
   grid-column-end: 2;
+  -ms-grid-row-align: center;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   font-family: $font;
-
+  box-shadow: 5px -4px 10px -6px #888;
+  
   .inbox {
     margin-left: 20px;
     font-size: 18px;
+    font-weight: bold;
   }
 
   .count {
@@ -29,5 +32,6 @@ $font: 'Helvetica';
 
   .select {
     margin: 5%;
+    
   }
 }
