--- a/src/styles/Options.scss
+++ b/src/styles/Options.scss
@@ -1,10 +1,12 @@
 .options{
   grid-column-start: 2;
   grid-column-end: 3;
+  -ms-grid-row-align: center;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  
   .buttonDelete{
     font-family: $font;
     font-size: 12px;
