--- a/src/styles/TitleMessage.css
+++ b/src/styles/TitleMessage.css
@@ -5,5 +5,8 @@
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 /3;
+  margin: 5%;
+  font-family: "Helvetica";
+  font-size: 25px;
 }
 /*# sourceMappingURL=TitleMessage.css.map */
