--- a/src/styles/Tag.scss
+++ b/src/styles/Tag.scss
@@ -9,22 +9,20 @@
     
     .datail{
         display: flex;
-        border: none;
         background-color: white;
         align-items: center;
         border-radius: 2px;
-        box-shadow: 2px 1px 6px 1px rgba(161,161,161,1);
+        box-shadow: 0px 1px 6px 1px rgba(161,161,161,1);
     }
     .json{
         color: $font;
         text-align: center;
-        background: map-get($colors, redc);
-        width: 20px;
+        background: map-get($colors, grayc);
         border-radius: 2px;
+        width: 20px;
         padding: 6px;
         max-width: 10px;
-        margin: 10px;
-        cursor: pointer;
+        margin: 5%;
         margin-left: 10px;
     }
     .ptag{
