--- a/src/styles/Options.scss
+++ b/src/styles/Options.scss
@@ -6,6 +6,9 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #e1ecfe;
   
   .buttonDelete{
     font-family: $font;
