--- a/src/styles/MessageBody.scss
+++ b/src/styles/MessageBody.scss
@@ -8,29 +8,21 @@
     font-family: $font;
     color: white;
   }
-
-  .currentTag{
-    color: $font;
-    text-align: center;
-    background: pink;
-    border-radius: 2px;
-    padding: 7px;
-    max-width: 10px;
-    margin-left: 10px;
-  }
   .body{
-    //display: flex;
     height: 360px;
     border: none;
     background-color: white;
     align-items: center;
     border-radius: 2px;
     box-shadow: 0px 1px 6px 1px rgba(161,161,161,1);
+    padding:7px;
+    .info{
+    margin: 5%;
+    font-family: $font;
+    }
   }
   .body1{
-    //display: flex;
     height: 30px;
-    border: none;
     background-color: map-get($colors, grayc);
     align-items: center;
     border-radius: 2px;
