--- a/src/styles/Search.scss
+++ b/src/styles/Search.scss
@@ -1,25 +1,31 @@
 .search{
   grid-column: 1 / 2;
   grid-row: 2 / 3;
-  margin: 5%;
-  -ms-grid-row-align: center;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  box-shadow: 5px 0px 10px -6px #888;
+ .inputSearch{
+  margin: 5%;
+  display: flex;
+  align-items: center;
+  width: 100%;
+    input[type=text] {
+        width: 100%;
+        padding: 6px;
+        border: none;
+        font-size: 17px;
+        border-radius: 3px;
+        box-shadow: 2px 1px 6px 1px rgba(161,161,161,1);
+      }
+      input::placeholder {
+        color: #949898;
+        font-family: $font;
+        font-size: $fsize;
+
+  }
+ }
   
-
-  input[type=text] {
-    width: 100%;
-    padding: 6px;
-    border: none;
-    font-size: 17px;
-    border-radius: 3px;
-    box-shadow: 2px 1px 6px 1px rgba(161,161,161,1);
-  }
-  input::placeholder {
-    color: #949898;
-    font-family: $font;
-    font-size: $fsize;
-
-  }
 
 }
