--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,12 +26,19 @@ body {
     background-color:#f5f5f5;
     width: 90%;
     max-width: 1000px;
+    max-height: 739px;
     margin: 20px auto;
+    margin-top: 3%;
     border-radius: $borders;
     display: grid;
     grid-template-rows: repeat(4, auto);
     grid-template-columns: repeat(2, 1fr);
     box-shadow: 3px 4px 12px -2px rgba(0,0,0,0.65);
+
+.side{
+  box-shadow: 5px 0px 10px -6px #888;
+}
+  
 
     @import "MessageBody";
     @import "Options";
@@ -40,12 +47,6 @@ body {
     @import "TitleMessage";
     @import "List";
     @import "Tag";
-}
-
-.leftSide{
-    grid-column: 1 / 2;
-    grid-row: 1 / 6;
-    box-shadow: 5px 0px 10px -6px #888;
 }
 .icon{
     width: 18px;
