--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -5,7 +5,8 @@
   height: 625px;     /*responsive*/
   cursor: pointer;
   box-shadow: 5px 0px 10px -6px #888;
-
+  max-height: 578px;
+  
   .messagePreview{
     display: flex;
     width: calc(100% - 4px);    /*responsive*/
