--- a/src/styles/MessageBody.scss
+++ b/src/styles/MessageBody.scss
@@ -3,6 +3,7 @@
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 5%;
+  max-height: 578px;
  
   .messageData{
     font-family: $font;
@@ -37,8 +38,6 @@
     font-size: 12px;
     color: white;
     border-radius: 2px;
-    border: none;
-    padding: 5px;
     width: auto;
     height: 100%;
     text-align: center;
