--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,11 @@
+    @import "MessageBody";
+    @import "Options";
+    @import "Filter";
+    @import "Search";
+    @import "TitleMessage";
+    @import "List";
+    @import "Tag";
+
 $default-bg: #EEF4F9;
 $borders: 4px;
 $font: 'Helvetica';
@@ -25,8 +33,6 @@ body {
 .contenedor{
     background-color:#f5f5f5;
     width: 90%;
-    max-width: 1000px;
-    max-height: 739px;
     margin: 20px auto;
     margin-top: 3%;
     border-radius: $borders;
@@ -44,21 +50,28 @@ body {
     width: 18px;
 } 
 
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-
+@media screen and (min-width : 768px) 
+and (max-width : 1024px)  { 
     .contenedor{
-    height: 1172px;
-    margin: 5%;
-    margin-top: 7%;
+        height: 1172px;
+        margin: 5%;
+        margin-top: 7%;
+        .side{
+            height: inherit;
+    
+        }    
     }
-} 
+    .lista{
+        height: 1032px;
+    }
+    .messageBody .body{
+        height: 451px;
+    }
+    
+}
 
-    @import "MessageBody";
-    @import "Options";
-    @import "Filter";
-    @import "Search";
-    @import "TitleMessage";
-    @import "List";
-    @import "Tag";
 
+
+
+    
 
