--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -49,7 +49,7 @@ body {
 .icon{
     width: 18px;
 } 
-
+//Responsive for iPad
 @media screen and (min-width : 768px) 
 and (max-width : 1024px)  { 
     .contenedor{
@@ -67,7 +67,24 @@ and (max-width : 1024px)  {
     .messageBody .body{
         height: 451px;
     }
-    
+}
+//responsive for iPhone 6,7,8,
+@media screen and (min-width : 375px) 
+and (max-width : 667px) { 
+    .contenedor{
+        height: 1595px;
+        margin: 5%;
+        margin-top: 7%;
+        .side{
+            height: inherit;
+        }    
+    }
+    .lista{
+        height: 1552px;
+    }
+    .messageBody .body{
+        height: 451px;
+    }
 }
 
 
